# fake-news-classifier

./: .gitignore  NLP_Overview.txt  README.md  infer.py  preprocess.py  pyproject.toml  requirements.txt  train.py
data/: merged.csv  merged_balanced.csv  sample.csv  test.csv  train.csv
fakenews/: __init__.py  infer.py  preprocess.py  train.py
fakenews.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fakenews/scripts/: evaluate_model.py  ingest_dataset.py  live_detect.py  tune_threshold.py
fakenews/ui/: app.py
models/: fake_news_model.joblib  fake_news_svc.joblib
scripts/: __init__.py  env_setup.ps1  evaluate_model.py  ingest_dataset.py  run_tests.ps1  tune_threshold.py
tests/: test_pipeline.py
ui/: app.py
