[project]
name = "fakenews"
version = "0.1.0"
description = "Baseline fake news detection (TF-IDF + Logistic Regression)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [ { name = "Deepanshu Singh Rathore" } ]
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0"
]

[project.optional-dependencies]
ui = ["streamlit>=1.37.0"]
dev = ["pytest>=7.4.0", "streamlit>=1.37.0"]
## Removed experimental transformer extra after cleanup

[project.scripts]
fakenews-train = "fakenews.train:main"
fakenews-infer = "fakenews.infer:main"
fakenews-eval = "fakenews.scripts.evaluate_model:main"
fakenews-ingest = "fakenews.scripts.ingest_dataset:main"
fakenews-tune-threshold = "fakenews.scripts.tune_threshold:main"
fakenews-ui = "fakenews.ui.app:main"
fakenews-live = "fakenews.scripts.live_detect:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fakenews", "fakenews.scripts", "fakenews.ui"]
